# vocabulary-learning-application

./: .gitignore  .gitmodules  Cargo.toml  README.md  diesel.toml  flake.nix  rust-toolchain.toml
.github/workflows/: cargo-audit.yml  nix-lints.yml  rvoc-backend.yml  web-api-ci.yml
backend/: .env  .envrc  .gitignore  docker-compose.yml  flake.nix  run_integration_tests.sh
backend/api_commands/: Cargo.toml
backend/api_commands/src/: lib.rs
backend/integration-tests/: Cargo.toml
backend/integration-tests/src/: main.rs  util.rs
backend/postgres/: init-rvoc-db.sh
backend/rvoc-backend/: .gitignore  Cargo.toml  Dockerfile
backend/rvoc-backend/migrations/2023-07-23-063257_create_language_table/: up.sql
backend/rvoc-backend/migrations/2023-07-30-081513_create_word_table/: down.sql  up.sql
backend/rvoc-backend/migrations/2023-08-08-084449_create_job_queue/: up.sql
backend/rvoc-backend/migrations/2023-08-20-081310_create_session_table/: up.sql
backend/rvoc-backend/migrations/2023-08-20-084550_create_user_table/: up.sql
backend/rvoc-backend/migrations/2023-08-20-090344_add_user_column_to_session_table/: down.sql  up.sql
backend/rvoc-backend/migrations/2023-12-09-091924_create_test_table/: down.sql  up.sql
backend/rvoc-backend/migrations/2023-12-14-081856_add_user_login_rate_limit_columns/: down.sql  up.sql
backend/rvoc-backend/src/: bin.rs  error.rs  lib.rs  lib_api_commands.rs  main.rs  schema.rs
backend/rvoc-backend/src/api_server/: mod.rs
backend/rvoc-backend/src/cli/: mod.rs
backend/rvoc-backend/src/configuration/: mod.rs
backend/rvoc-backend/src/data_model/: mod.rs
backend/rvoc-backend/src/database/: async_connection_pool.rs  connection.rs  migrations.rs  mod.rs  model.rs  schema.rs  sync_connection.rs  transactions.rs
backend/rvoc-backend/src/database/model/: mod.rs
backend/rvoc-backend/src/database/model/users/: mod.rs
backend/rvoc-backend/src/database/model/vocabulary/: mod.rs
backend/rvoc-backend/src/email/: mod.rs
backend/rvoc-backend/src/error/: mod.rs
backend/rvoc-backend/src/integration_tests/: mod.rs
backend/rvoc-backend/src/job_queue/: mod.rs
backend/rvoc-backend/src/job_queue/jobs/: delete_expired_sessions.rs  mod.rs  update_witkionary.rs
backend/rvoc-backend/src/main/: mod.rs
backend/rvoc-backend/src/model/user/: mod.rs  password_hash.rs  username.rs
backend/rvoc-backend/src/update_wiktionary/: mod.rs
backend/rvoc-backend/src/web/: authentication.rs  mod.rs  session.rs  user.rs
backend/rvoc-backend/src/web/user/: hashed_password.rs  mod.rs  model.rs  password_hash.rs
backend/rvoc-backend/tests/: end_to_end.rs
backend/test-requests/: add_language.json  list_languages.json  request.sh
