[workspace]
members = [
    "backend/rvoc-backend",
    "backend/integration-tests",
    "backend/api_commands",
]
resolver = "2"

# Prevent crane from rebuilding dependencies unnecessarily (https://github.com/ipetkov/crane/issues/370)
[profile.dev.build-override]
debug = false

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.58.1"
publish = false

[workspace.dependencies]
# sensitive data handling
secure-string = { version = "0.3.0", features = ["serde"] }
