[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvoc-backend = { path = "../rvoc-backend" }

# http requests
tokio = "1.32.0"
reqwest = "0.11.20"

# logging
log = "0.4.20"
simplelog = "0.12.1"

# serde
serde = "1.0.186"
serde_json = "1.0.105"