[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "integration-tests"
path = "src/main.rs"

[dependencies]
# http requests
tokio = { version = "1.35.0", features = ["macros"] }
reqwest = { version = "0.11.24", features = ["json", "cookies"] }

# logging
log = "0.4.20"
simplelog = "0.12.1"

# serde
serde = "1.0.190"
serde_json = "1.0.105"

# web api
api_commands = { path = "../api_commands" }

# sensitive data handling
secure-string.workspace = true

# errors
anyhow = { version = "1.0.75", features = ["backtrace"] }
