[package]
name = "rvoc-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rvoc-backend"
path = "src/bin.rs"

[dependencies]
# runtime
tokio = {version = "1.29.1", features = []}

# logging and telemetry
log = "0.4.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-opentelemetry = "0.19.0"

# database
diesel = "2.1.0"
diesel_migrations = "2.1.0"
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }

# login and secrets
password-hash = "0.5.0"
argon2 = "0.5.1"
rand = "0.8.5"
secstr = "0.5.1"

[dev-dependencies]
