[package]
name = "rvoc-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rvoc-backend"
path = "src/main.rs"

[dependencies]
# runtime
tokio = {version = "1.29.1", features = []}

# cli - configuration happens via environment variables,
#       we only use a cli to outsource stuff that does not support async to subprocesses
clap = {version = "4.3.19", features = ["derive"]}

# logging and telemetry
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["fmt", "json"]}
tracing-opentelemetry = {version = "0.20.0"}
opentelemetry = {version = "0.20.0", features = ["rt-tokio-current-thread"]}
opentelemetry-otlp = {version = "0.13.0"}

# error handling
thiserror = "1.0.44"

# database
diesel = {version = "2.1.0", features = ["postgres", "chrono"]}
diesel_migrations = "2.1.0"
diesel-async = { version = "0.3.2", features = ["postgres", "deadpool"] }

# wiktionary parsing
wiktionary-dump-parser = "0.5.2"

# convert enum variants from and to string
strum = { version = "0.25", features = ["derive"] }

# date and time
chrono = "0.4.26"

# login and secrets
password-hash = "0.5.0"
argon2 = "0.5.1"
rand = "0.8.5"
secstr = "0.5.1"

[dev-dependencies]
