[package]
name = "rvoc-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

default-run = "rvoc-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rvoc-backend"
path = "src/main.rs"

[dependencies]
# runtime
tokio = { version = "1.35.0", features = [] }
async-trait = "0.1.74"

# cli - configuration happens via environment variables,
#       we only use a cli for manual administrative tasks.
clap = { version = "4.4.7", features = ["derive"] }

# logging and telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json"] }
tracing-opentelemetry = { version = "0.22.0" }
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.1", features = [
    "rt-tokio-current-thread",
] }
opentelemetry-otlp = { version = "0.14.0" }

# error handling
thiserror = "1.0.50"

# database
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }

# wiktionary parsing
wiktionary-dump-parser = "0.6.0"

# convert enum variants from and to string
strum = { version = "0.25", features = ["derive"] }

# date and time
chrono = "0.4.26"

# web
axum = { version = "0.6.20" }
tower = "0.4.13"
serde = "1.0.190"

# login and secrets
typed-session = "0.9.0"
typed-session-axum = "0.2.2"
password-hash = { version = "0.5.0", features = ["std"] }
argon2 = { version = "0.5.1", features = ["std"] }
rand = "0.8.5"

# sensitive data handling
secure-string.workspace = true

# web api
api_commands = { path = "../api_commands" }

[dev-dependencies]
